# MusicSorter

./: .gitignore  .vimproject  README.md  muso.cabal
src/: music_sorter.hs
src/MuSo/: Config.hs  CopyFiles.hs  PathFormat.hs
